[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI/ActionBar/ActionButton.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.235294, 0.235294, 0.235294, 1 )

[node name="ActionButton" type="Control"]
anchor_right = 0.051
anchor_bottom = 0.087
margin_right = -0.223999
margin_bottom = -0.200001
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 52, 52 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="TextureButton"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -20.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = 17.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="TextureButton"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 52, 52 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="mouse_entered" from="TextureButton/Background" to="." method="_on_Background_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton/Background" to="." method="_on_Background_mouse_exited"]
